# web-scraper

./: README.md
amazon-web-scraper/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
amazon-web-scraper/src/: LLM.py  client.py  db.py  services.py
amazon-web-scraper/src/app/: __init__.py  bootstrap.py
amazon-web-scraper/src/application/: __init__.py  analysis_service.py  competitor_service.py  product_service.py
amazon-web-scraper/src/domain/: __init__.py  models.py  utils.py
amazon-web-scraper/src/infrastructure/: __init__.py  llm_client.py  oxylabs_client.py
amazon-web-scraper/src/infrastructure/data/: __init__.py  db.py
amazon-web-scraper/src/infrastructure/data/repositories/: product_repository.py
amazon-web-scraper/src/repositories/: product_repository.py
amazon-web-scraper/src/ui/: __init__.py  app.py  components.py  styles.py
oxylabs-web-scraper/: .env.example  .gitignore  AGENTS.md  docker-compose.yml  main.py  pyproject.toml
oxylabs-web-scraper/docs/: amazon.bestsellers.md  amazon.pricing.md  amazon.product.md  amazon.search.md  amazon.url.md  oxylabs.getting.started.md
oxylabs-web-scraper/skills/oxylabs-docs-first/: SKILL.md
oxylabs-web-scraper/src/: LLM.py  db.py  oxylabs_client.py  services.py
